fix: Settings group control's label make vertically middle align

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -3328,7 +3328,7 @@ input[type="text"].select2-search__field {
 
 .ast-field-settings-wrap .ast-field-settings-modal {
   border-radius: 3px;
-  margin-top: 9px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -3535,6 +3535,10 @@ input[type="text"].select2-search__field {
 
 .ast-top-divider.customize-control-ast-settings-group .ast-toggle-desc-wrap .ast-adv-toggle-icon {
     top: 23px;
+}
+
+.customize-control-ast-settings-group .ast-toggle-desc-wrap {
+	line-height: 16px;
 }
 
 .customize-control-ast-slider .wrapper {
@@ -4925,7 +4929,7 @@ input[type="text"].select2-search__field {
 
 .ast-adv-toggle-icon {
   left: 2px;
-  top: -2px;
+  top: 0;
   position: absolute;
   width: 18px;
   height: 18px;
@@ -5026,7 +5030,7 @@ input[type="text"].select2-search__field {
 
 .ast-field-settings-wrap .ast-field-settings-modal {
   border-radius: 3px;
-  margin-top: 9px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
