--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -2224,7 +2224,7 @@ input[type="text"].select2-search__field {
 
 .ast-adv-toggle-icon {
   right: 2px;
-  top: -2px;
+  top: 0;
   position: absolute;
   width: 18px;
   height: 18px;
@@ -2325,7 +2325,7 @@ input[type="text"].select2-search__field {
 
 .ast-field-settings-wrap .ast-field-settings-modal {
   border-radius: 3px;
-  margin-top: 9px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
